# text_auto_converter

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  Sensing_max9296_max9295_ovOX03C_27mclk_MIPI_1920x1280_raw12_30fps_PortB.ini  Sensing_max9296_max9295_ovOX03C_27mclk_MIPI_1920x1280_raw12_30fps_freertos.txt  Sensing_max9296_max9295_ovOX03C_27mclk_MIPI_1920x1280_raw12_30fps_freertos_converted_20260305_155125.txt  Sensing_max9296_max9295_ovOX5B_24mclk_MIPI_2592x1944_raw10_15fps.ini  Sensing_max9296_max96717F_ovOX03C_27mclk_MIPI_1920x1280_raw12_30fps_horizon.ini  Sensing_max9296_max96717_ovOX03C_27mclk_MIPI_1920x1080_HCG-raw10_30fps_linear - Copy.txt  Sensing_max9296_max96717_ox08d10_freertos_format.txt  Sensing_max9296_max96717_ox08d10_freertos_format_cleaned.ini  Sensing_max9296_max96717_ox08d10_freertos_format_cleaned.txt  Sensing_max9296_max96717_ox08d10_new.ini  Sensing_max9296_max96717_ox08d10_new_full - Copy.txt  Sensing_max9296_max96717_ox08d10_new_full.ini  Sensing_max9296_max96717_ox08d10_ww07 - Copy.ini  Sensing_ub954_ub953_ISX031_1920x1536_30fps.ini  Sensing_ub954_ub953_ar0233_1920x1080_raw12_30fps.ini  Sensing_ub954_ub953_ar0820_27mclk_MIPI_3840x2160_raw12_15fps.ini  Sensing_ub954_ub953_ovOX03C_27mclk_MIPI_1920x1280_raw12_26fps_modified.ini  Sensing_ub954_ub953_ovOX03C_27mclk_MIPI_1920x1280_raw12_26fps_port1.ini  Sensing_ub954_ub953_ovOX08B_27mclk_MIPI_3840x2160_raw12_6fps.ini  Sensing_x8d_max96717_max9296_converted.ini  Sensing_x8d_max96717_max9296_converted_full.ini  UNIFIED_README.md  VENDOR_README.md  address_conversion_test.ini  config_converter.py  (+35 more)
(+44 files in other folders)
